deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: me
spec:
  selector:
    matchLabels:
      app: me
  template:
    metadata:
      labels:
        app: me
    spec:
      containers:
        - name: me
          image: ghcr.io/xetera/me:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: me-config
              mountPath: /app/config.toml
              subPath: config.toml
      volumes:
        - name: me-config
          secret:
            secretName: me-config
            items:
              - key: config.toml
                path: config.toml
